log

Thu Mar 10 15:28:16 HSP 2022: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
  272 | }
      | ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
  250 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:5:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
   20 | int sumaN(int a[], int N) {
      |     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
fc4c30f
Thu Mar 10 16:08:02 HSP 2022: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
34e6236
Fri Mar 11 11:18:27 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy'; did you mean 'strcpy'? [-Werror=implicit-function-declaration]
   62 |    strcopy(nuevaPersona->nombre, nombre);
      |    ^~~~~~~
      |    strcpy
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
8ac24d3
Fri Mar 11 11:22:10 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy'; did you mean 'strcpy'? [-Werror=implicit-function-declaration]
   62 |    strcopy(nuevaPersona->nombre, nombre);
      |    ^~~~~~~
      |    strcpy
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
2292f43
Fri Mar 11 11:24:02 HSP 2022: 
In file included from test.c:5:
exercises.c: In function 'crearPersona':
exercises.c:62:4: error: implicit declaration of function 'strcopy'; did you mean 'strcpy'? [-Werror=implicit-function-declaration]
   62 |    strcopy(nuevaPersona->nombre, nombre);
      |    ^~~~~~~
      |    strcpy
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
34dee69
Fri Mar 11 11:24:36 HSP 2022: 
 exercises.c | 30 +++++++++++++++---------------
 1 file changed, 15 insertions(+), 15 deletions(-)
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f5b05ba
Fri Mar 11 11:26:23 HSP 2022: 
 tests:  1|6
total_score: 10/70
dfd20c7
Fri Mar 11 11:34:54 HSP 2022: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
b7c9e32
Fri Mar 11 11:36:05 HSP 2022: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  3|4
total_score: 30/70
6b3e958
Fri Mar 11 11:36:50 HSP 2022: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function 'crearVector':
exercises.c:87:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   87 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
d19a8ce
Fri Mar 11 11:40:47 HSP 2022: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crearVector':
exercises.c:86:23: error: assignment to 'int *' from incompatible pointer type 'Vector *' [-Werror=incompatible-pointer-types]
   86 |    vectorLocal->datos = (Vector*)calloc(n,sizeof(int));
      |                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
18970b6
Fri Mar 11 12:00:31 HSP 2022: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
30d718f
Fri Mar 11 12:02:41 HSP 2022: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|3
total_score: 40/70
ea568ec
Fri Mar 11 15:21:50 HSP 2022: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function 'asignarValor':
exercises.c:102:8: error: invalid type argument of '->' (have 'Vector')
  102 |    v[i]->datos = NULL;
      |        ^~
exercises.c:103:8: error: invalid type argument of '->' (have 'Vector')
  103 |    v[i]->datos = (int*) calloc(sizeof(int));
      |        ^~
exercises.c:103:25: error: too few arguments to function 'calloc'
  103 |    v[i]->datos = (int*) calloc(sizeof(int));
      |                         ^~~~~~
In file included from test.c:2:
C:/TDM-GCC-64/x86_64-w64-mingw32/include/stdlib.h:529:17: note: declared here
  529 |   void *__cdecl calloc(size_t _NumOfElements,size_t _SizeOfElements);
      |                 ^~~~~~
In file included from test.c:5:
exercises.c:104:8: error: invalid type argument of '->' (have 'Vector')
  104 |    v[i]->datos[i] = valor;
      |        ^~
Compilation failed
69fb958
